[package]
name = "nannou-sc2"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sebosp/nannou-sc2"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
s2protocol = "1.1.6"
nom-mpq = "0.1.3"
gloo = "0.9"
js-sys = "0.3"
base64 = "0.21"
serde_json = "1.0.91"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]

# [lib]
# crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.66"
