[package]
name = "cooper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sebosp/cooper"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
plotters = "0.3"
plotters-canvas = "0.3"
s2protocol = "1.1"
nom-mpq = "0.1"
gloo = "0.9"
gloo-console = "0.2.3"
gloo-net = "0.2"
js-sys = "0.3"
base64 = "0.21"
serde_json = "1.0.91"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "File",
  "DragEvent",
  "DataTransfer",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "HtmlCanvasElement"
]

# [lib]
# crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.66"
